--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "angular": "~1.4.7",
-    "angular-mocks": "~1.4.7"
+    "angular-mocks": "~1.4.7",
+    "angular-route": "~1.4.7"
   }
 }
